Whitespace, styling issues, changed title on imports page.

--- a/client/css/_import.styl
+++ b/client/css/_import.styl
@@ -5,13 +5,8 @@
   margin auto
   width 100%
 
-  th
-    .imports-headers
-      font-weight 300
-
   .name-cell
     width 50%
-    word-wrap break-word
 
   .progress-cell
     width 25%
@@ -49,5 +44,6 @@
 
 .canceled
   border-width 0
+
   .cancel-white
     color white 
